FindBugs: use Double.valueOf().